5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1642_652.log
== TEST (2019-04-12 13:24:49) 
-- CODE:
num = int(input('Digite um numero de 3 digitos: '))

dig = num // 10

print(dig)
-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:25:00) 
-- CODE:
num = int(input('Digite um numero de 3 digitos: '))

dig = num // 100

print(dig)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:25:05) 
-- CODE:
num = int(input('Digite um numero de 3 digitos: '))

dig = num // 100

print(dig)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:25:09) 
-- CODE:
num = int(input('Digite um numero de 3 digitos: '))

dig = num // 100

print(dig)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:25:59) 
-- CODE:
num = int(input('Digite um numero de 3 digitos: '))

dig = num // 100

num = num - dig*100

print(dig, num)
-- OUTPUT:
7 28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:27:50) 
-- CODE:
num1 = int(input('Digite um numero de 3 digitos: '))

dig = num // 100

num2 = num - dig*100
div = num1 % num2

if (div == 0):
	print('SIM')
	
else:
	print('NAO')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dig = num // 100
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:11) 
-- CODE:
num1 = int(input('Digite um numero de 3 digitos: '))

dig = num1 // 100

num2 = num - dig*100
div = num1 % num2

if (div == 0):
	print('SIM')
	
else:
	print('NAO')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = num - dig*100
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:20) 
-- CODE:
num1 = int(input('Digite um numero de 3 digitos: '))

dig = num1 // 100

num2 = num1 - dig*100
div = num1 % num2

if (div == 0):
	print('SIM')
	
else:
	print('NAO')
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:26) 
-- CODE:
num1 = int(input('Digite um numero de 3 digitos: '))

dig = num1 // 100

num2 = num1 - dig*100
div = num1 % num2

if (div == 0):
	print('SIM')
	
else:
	print('NAO')
-- EXECUTION TIME:
0.266531
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
